--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
 </head>
 <body>
     <div class="fonts">
-		<h1 class="title">Omnitours Colombia</h1>
-		<h1 class="light-45">Frutiger LT 45 Light - Eje Cafetero</h1>
-		<h1 class="roman-45">Frutiger LT 55 Roman - Eje Cafetero</h1>
-		<h1 class="bold-65">Frutiger LT 65 Bold - Eje Cafetero</h1>
-		<h1 class="black-75">Frutiger LT 75 Black - Eje Cafetero</h1>
+        <div class="item">
+        	<span class="title">Eje Cafetero</span>
+        </div>
+
+        <div class="item">
+        	<span class="roman-45">5 días</span>
+        </div>
+		
+		<div class="item">
+		    <span class="light-45">Conoce la región cafetera colombiana</span>
+		</div>
+		<!-- <h1 class="bold-65">Frutiger LT 65 Bold - Eje Cafetero</h1>
+		<h1 class="black-75">Frutiger LT 75 Black - Eje Cafetero</h1> -->
 	</div>
 </body>
 </html>
